# math_type_display_hack

./: Cargo.toml  README.md
examples/: display.rs
src/: lib.rs
